# detectobot

./: README.md  __init__.py  config.yaml  pyproject.toml  requirements.txt  summarize_article.py  watcher.db
docs/: USAGE.md
src/detectabot/: config.yaml
src/detectabot/agents/: feed_watcher.py  summarizer.py
src/detectobot/: __init__.py  db_utils.py  feed_watcher.py  watcher.py
src/detectobot/agents/: detection_agent.py  feed_watcher.py  site_watcher.py  summarizer.py
src/detectobot/core/: __init__.py  config.py  db_utils.py  watcher.py
tests/: test_feed_watcher.py  test_site_watcher.py
