[project]
name = "detectobot"
version = "0.1.0"
description = "Agent-driven detection engineering pipeline"
authors = [{name = "Your Name", email = "your@email.com"}]
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.10",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "bs4>=0.0.2",
    "readability-lxml>=0.8.1",
    "lxml[html-clean]>=5.3.2",
    "pydantic-ai>=0.3.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
